fix z-index

--- a/packages/app/studio/src/ui/timeline/tracks/audio-unit/AudioUnitsTimeline.sass
+++ b/packages/app/studio/src/ui/timeline/tracks/audio-unit/AudioUnitsTimeline.sass
@@ -40,7 +40,7 @@ component
         grid-column: 1
         pointer-events: all
         font-size: 10px
-        z-index: 9999
+        z-index: 1
 
         svg
           margin-left: 3px
